--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,15 +7,17 @@ Login
 {% endblock title %}
 
 {% block content %}
-<div class="max-w-md w-full bg-white p-6 rounded-lg">
+<div class="max-w-md w-full bg-gray-100 p-6 border rounded-lg">
 
         <h1 class="text-2xl font-bold mb-4 text-center">Sign In</h1>
         <p class="text-center mb-6">
-                If you have not created an account yet, then please
-                <a href="{% url 'account_signup' %}" class="text-blue-500 hover:underline">sign up
+                If you have not created an account yet <br> then please
+                <a href="{% url 'account_signup' %}"
+                        class="text-blue-500 hover:underline">sign up
                 </a>first.
         </p>
-        <form method="post" action="{% url 'account_login' %}">
+        <form method="post"
+                action="{% url 'account_login' %}">
                 {% csrf_token %}
                 <div class="mb-4">
                         {% if form.login.errors %}
@@ -28,15 +30,17 @@ Login
                         </div>
                         {% endfor %}
                         {% endif %}
-                        <label for="id_login" class="block text-sm font-medium text-gray-700">Email
+                        <label for="id_login"
+                                class="block text-sm font-medium text-gray-700">Email
                         </label>
-                        {% render_field form.login class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm                        p-2" field="email" %}
+                        {% render_field form.login class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" field="email" %}
                 </div>
                 <div class="mb-4">
 
-                        <label for="id_password" class="block text-sm font-medium text-gray-700">Password
+                        <label for="id_password"
+                                class="block text-sm font-medium text-gray-700">Password
                         </label>
-                        {% render_field form.password class="mt-1 block w-full border border-gray-300 rounded-md                        shadow-sm p-2" field="password" %}
+                        {% render_field form.password class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" field="password" %}
                 </div>
                 <button type="submit"
                         class="w-full bg-blue-600 text-white p-3 rounded-md text-lg font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500">Login
