--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,7 +7,7 @@ Sign Up
 {% endblock title %}
 
 {% block content %}
-<div class="max-w-md w-full bg-white p-6 rounded-lg">
+<div class="max-w-md w-full bg-gray-100 border p-6 rounded-lg">
         <h1 class="text-2xl font-bold mb-4 text-center">Sign Up</h1>
         <p class="text-center mb-6">Already have an account? Please
                 <a href="/accounts/login/" class="text-blue-500 hover:underline">
