--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
-    {% block head %}{% endblock head %}     
+    <script src="{% static 'index.js' %}"></script>
+    {% block head %}{% endblock head %}
 </head>
 
 <body>
